--- a/src/app/features/workplace/service-users/service-users.component.html
+++ b/src/app/features/workplace/service-users/service-users.component.html
@@ -80,9 +80,9 @@
     </div>
   </div>
 
-  <app-submit-button
+  <app-workplace-submit-button
     [return]="!!return"
     [isExistingStaffRecord]="false"
-    (clicked)="onSubmit($event)"
-  ></app-submit-button>
+    (clicked)="setSubmitAction($event)"
+  ></app-workplace-submit-button>
 </form>
