--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -18,7 +18,7 @@
             <h1 class="govuk-fieldset__heading">Add your new starters from the last 12 months</h1>
           </legend>
           <p class="govuk-!-margin-top-8 govuk-!-margin-bottom-6">
-            These should only be new starters who are permanent or temporary staff
+            These should only be new starters who are permanent or temporary staff.
           </p>
         </div>
       </div>
