change spacing between elements

--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -17,7 +17,9 @@
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">Add your staff leavers from the last 12 months</h1>
           </legend>
-          <p>These should only be leavers who were permanent or temporary staff.</p>
+          <p class="govuk-!-margin-top-8 govuk-!-margin-bottom-6">
+            These should only be leavers who were permanent or temporary staff.
+          </p>
         </div>
       </div>
       <ng-container formArrayName="leavers">
@@ -104,7 +106,7 @@
         </div>
       </ng-container>
       <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
+        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-4">
           <button
             *ngIf="!allJobsSelected"
             class="govuk-button govuk-button--secondary"
@@ -121,7 +123,10 @@
 
       <div class="govuk-form-group">
         <div class="govuk-radios">
-          <div class="govuk-radios__item" *ngFor="let option of leaversKnownOptions; let i = index">
+          <div
+            class="govuk-radios__item govuk-!-margin-bottom-4"
+            *ngFor="let option of leaversKnownOptions; let i = index"
+          >
             <input
               class="govuk-radios__input"
               id="leaversKnown-{{ i }}"
