--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -96,7 +96,7 @@
         </div>
       </ng-container>
       <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
+        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-4">
           <button
             *ngIf="!allJobsSelected"
             class="govuk-button govuk-button--secondary"
@@ -113,7 +113,10 @@
 
       <div class="govuk-form-group">
         <div class="govuk-radios">
-          <div class="govuk-radios__item" *ngFor="let option of startersKnownOptions; let i = index">
+          <div
+            class="govuk-radios__item govuk-!-margin-bottom-4"
+            *ngFor="let option of startersKnownOptions; let i = index"
+          >
             <input
               class="govuk-radios__input"
               id="noRecordsReason-{{ i }}"
