--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -17,7 +17,9 @@
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">Add your current staff vacancies</h1>
           </legend>
-          <p>These should only be vacancies for permanent or temporary staff.</p>
+          <p class="govuk-!-margin-top-8 govuk-!-margin-bottom-6">
+            These should only be vacancies for permanent or temporary staff.
+          </p>
         </div>
       </div>
       <ng-container formArrayName="vacancies">
@@ -107,7 +109,7 @@
         </div>
       </ng-container>
       <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-6">
+        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-4">
           <button
             *ngIf="!allJobsSelected"
             class="govuk-button govuk-button--secondary"
@@ -124,7 +126,10 @@
 
       <div class="govuk-form-group">
         <div class="govuk-radios">
-          <div class="govuk-radios__item" *ngFor="let option of vacanciesKnownOptions; let i = index">
+          <div
+            class="govuk-radios__item govuk-!-margin-bottom-4"
+            *ngFor="let option of vacanciesKnownOptions; let i = index"
+          >
             <input
               class="govuk-radios__input"
               id="vacanciesKnown-{{ i }}"
