feat(removeUserHeaderLinkFromWdfNewDesignFeatureFlag): Fixed re-send user set-up email to show as a link

--- a/src/app/features/workplace/user-account-view/user-account-view.component.html
+++ b/src/app/features/workplace/user-account-view/user-account-view.component.html
@@ -11,6 +11,7 @@
         draggable="false"
         role="button"
         (click)="resendActivationLink($event)"
+        href="#"
       >
         Resend the user set-up email</a
       >
