change max min number error messages, remove error when first input is selected

--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -17,9 +17,7 @@
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
             <h1 class="govuk-fieldset__heading">Add your staff leavers from the last 12 months</h1>
           </legend>
-          <p class="govuk-!-margin-top-8 govuk-!-margin-bottom-6">
-            These should only be leavers who were permanent or temporary staff.
-          </p>
+          <p>These should only be leavers who were permanent or temporary staff.</p>
         </div>
       </div>
       <ng-container formArrayName="leavers">
@@ -75,10 +73,10 @@
                 <ng-container *ngIf="submitted && !emptyForm && leaver.get('total').invalid; else hiddenTotalError">
                   <span *ngIf="leaver.get('total').errors.required"> Enter the number of leavers</span>
                   <span *ngIf="leaver.get('total').errors.min"
-                    >Number must be between {{ this.minTotal }} - {{ this.maxTotal }}</span
+                    >Number must be between {{ this.minTotal }} and {{ this.maxTotal }}</span
                   >
                   <span *ngIf="leaver.get('total').errors.max">
-                    Number must be between {{ this.minTotal }} - {{ this.maxTotal }}
+                    Number must be between {{ this.minTotal }} and {{ this.maxTotal }}
                   </span>
                 </ng-container>
                 <ng-template #hiddenTotalError
@@ -121,12 +119,9 @@
         </div>
       </div>
 
-      <div class="govuk-form-group">
+      <div class="govuk-form-group govuk-!-margin-bottom-3">
         <div class="govuk-radios">
-          <div
-            class="govuk-radios__item govuk-!-margin-bottom-4"
-            *ngFor="let option of leaversKnownOptions; let i = index"
-          >
+          <div class="govuk-radios__item" *ngFor="let option of leaversKnownOptions; let i = index">
             <input
               class="govuk-radios__input"
               id="leaversKnown-{{ i }}"
