feat(workplaceDetailsDoYouProvideAnyOtherServicesTextChange): Updated error message and heading size

--- a/src/app/features/workplace/other-services/other-services.component.html
+++ b/src/app/features/workplace/other-services/other-services.component.html
@@ -10,9 +10,7 @@
     <div class="govuk-grid-column-two-thirds">
       <div class="govuk-form-group" [class.govuk-form-group--error]="submitted && form.invalid">
         <fieldset class="govuk-fieldset" aria-describedby="otherJobRoles-hint">
-          <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-            <h1 class="govuk-fieldset__heading">Do you provide any other services?</h1>
-          </legend>
+          <h1 class="govuk-heading-l">Do you provide any other services?</h1>
           <div class="govuk-!-margin-bottom-7">
             <p>
               You selected '{{ establishment.mainService.name }}' as your main service when you created your account.
