add margin to the top of the total for the leavers, starters and vacancies components

--- a/src/app/features/workplace/leavers/leavers.component.html
+++ b/src/app/features/workplace/leavers/leavers.component.html
@@ -114,7 +114,7 @@
             Add another job role
           </button>
         </div>
-        <div class="govuk-grid-column-one-third">
+        <div class="govuk-grid-column-one-third govuk-!-margin-top-1">
           <p class="govuk-heading-m">Total leavers: {{ totalLeavers }}</p>
         </div>
       </div>
