--- a/src/app/features/workplace/vacancies/vacancies.component.html
+++ b/src/app/features/workplace/vacancies/vacancies.component.html
@@ -117,7 +117,7 @@
             Add another job role
           </button>
         </div>
-        <div class="govuk-grid-column-one-third">
+        <div class="govuk-grid-column-one-third govuk-!-margin-top-1">
           <p class="govuk-heading-m">Total vacancies: {{ totalVacancies }}</p>
         </div>
       </div>
