--- a/src/app/features/workplace/starters/starters.component.html
+++ b/src/app/features/workplace/starters/starters.component.html
@@ -104,7 +104,7 @@
             Add another job role
           </button>
         </div>
-        <div class="govuk-grid-column-one-third">
+        <div class="govuk-grid-column-one-third govuk-!-margin-top-1">
           <p class="govuk-heading-m">Total new starters: {{ totalStarters }}</p>
         </div>
       </div>
