--- a/src/app/shared/components/workplace-tab/workplace-tab.component.html
+++ b/src/app/shared/components/workplace-tab/workplace-tab.component.html
@@ -35,7 +35,9 @@
 <ng-container *ngIf="updateWorkplaceAlert; then alert; else summary"></ng-container>
 <ng-template #alert>
   <app-inset-text *ngIf="updateWorkplaceAlert" color="todo">
-    <a [routerLink]="['/workplace', workplace?.uid, 'start']">Start to add more details about your workplace</a>
+    <a [routerLink]="['/workplace', workplace?.uid, 'start']" [state]="{ navigatedFromFragment: 'workplace' }">
+      Start to add more details about your workplace
+    </a>
   </app-inset-text>
 </ng-template>
 
