--- a/src/app/features/workplace/recruitment-advertising-cost/recruitment-advertising-cost.component.html
+++ b/src/app/features/workplace/recruitment-advertising-cost/recruitment-advertising-cost.component.html
@@ -1,1 +1,61 @@
-<div>Recruitment advertising component</div>
+<app-error-summary
+  *ngIf="(submitted && form.invalid) || serverError"
+  [formErrorsMap]="formErrorsMap"
+  [serverError]="serverError"
+  [form]="form"
+></app-error-summary>
+
+<form #formEl novalidate (ngSubmit)="onSubmit()" [formGroup]="form">
+  <fieldset class="govuk-fieldset">
+    <div class="govuk-form-group govuk-!-margin-bottom-0" [class.govuk-form-group--error]="">
+      <div class="govuk-grid-row">
+        <div class="govuk-grid-column-two-thirds">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
+            <h1 class="govuk-fieldset__heading">
+              How much money have you spend on advertising for staff in the last 4 weeks?
+            </h1>
+          </legend>
+        </div>
+      </div>
+      <div class="govuk-grid-row govuk-!-margin-bottom-6">
+        <div class="govuk-grid-column-two-thirds">
+          <div class="govuk-form-group" [class.govuk-form-group--error]="">
+            <label class="govuk-label" for="amountSpent">Amount spent</label>
+            <span id="amountSpent-hint" class="govuk-hint">For example, 150.40</span>
+            <div class="govuk-input__wrapper">
+              <div class="govuk-input__prefix">£</div>
+              <input
+                class="govuk-input govuk-input--width-5"
+                [formControlName]="'amountSpent'"
+                id="amountSpent"
+                name="amountSpent"
+                [class.govuk-input--error]=""
+                type="text"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="gouvk-grid-row govuk-!-margin-bottom-3">
+        <div class="govuk-form-group">
+          <div class="govuk-radios">
+            <div class="govuk-radios__item" *ngFor="let option of amountSpentKnownOptions; let i = index">
+              <input
+                class="govuk-radios__input"
+                type="radio"
+                id="amountSpentKnown-{{ i }}"
+                name="amountSpentKnown"
+                [formControlName]="'amountSpentKnown'"
+                [value]="option.value"
+              />
+              <label for="amountSpentKnown-{{ i }}" class="govuk-label govuk-radios__label">{{ option.label }}</label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </fieldset>
+</form>
+
+<app-workplace-submit-button [return]="!!return" [isExistingStaffRecord]="false" (clicked)="setSubmitAction($event)">
+</app-workplace-submit-button>
