feat(staffRecruitmentCaptureTrainingRequirement): Fixed failing test and updated text as a result of deskcheck

--- a/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
+++ b/src/app/features/workplace/staff-recruitment-capture-training-requirement/staff-recruitment-capture-training-requirement.component.html
@@ -9,7 +9,7 @@
             </h1>
           </legend>
           <div class="govuk-!-margin-bottom-7">
-            <p>Training could be things like first aid or fire safety.</p>
+            <p>Training could be things like first aid or fire safety training.</p>
           </div>
 
           <div class="govuk-radios govuk-form-group">
