refactor validators into single validator function, fix corner case error messaging

--- a/src/app/features/workplace/number-of-interviews/number-of-interviews.component.html
+++ b/src/app/features/workplace/number-of-interviews/number-of-interviews.component.html
@@ -28,7 +28,12 @@
               <span *ngIf="this.form.get('numberOfInterviews').errors.nonInteger">
                 {{ getFormErrorMessage('numberOfInterviews', 'nonInteger') }}
               </span>
-              <span *ngIf="this.form.get('numberOfInterviews').errors.negativeNumber">
+              <span
+                *ngIf="
+                  this.form.get('numberOfInterviews').errors.negativeNumber &&
+                  !this.form.get('numberOfInterviews').errors.nonInteger
+                "
+              >
                 {{ getFormErrorMessage('numberOfInterviews', 'negativeNumber') }}
               </span>
               <span
