feat(updateWorkplaceDetailsStartPage): Added new bullet points to start page

--- a/src/app/features/workplace/start/start.component.html
+++ b/src/app/features/workplace/start/start.component.html
@@ -10,6 +10,10 @@
       <li>whether we can share your data</li>
       <li>whether you have any current staff vacancies</li>
       <li>whether you've had new starters or leavers in the last 12 months</li>
+      <li>how much money you've spent on advertising for staff in the last 4 weeks</li>
+      <li>how many people you've interviewed in the last 4 weeks</li>
+      <li>whether new starters have to repeat training done with previous employers</li>
+      <li>whether you'd accept a Care Certificate from a worker's previous employer</li>
     </ul>
     <a
       [routerLink]="['/workplace', establishment.uid, 'type-of-employer']"
