resolved routing issues

--- a/src/app/features/workplace/staff-recruitment/staff-recruitment.component.html
+++ b/src/app/features/workplace/staff-recruitment/staff-recruitment.component.html
@@ -1,7 +1,7 @@
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds-from-desktop">
     <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Staff Recruitment</h1>
-    <p>We've added 4 new staff recruitment questions to ASC-WDS. We want to know:':</p>
+    <p>We've added 4 new staff recruitment questions to ASC-WDS. We want to know:</p>
     <ul class="govuk-list govuk-list--bullet">
       <li>how much money is being spent on advertising for staff?</li>
       <li>how many people are being interviewed?</li>
@@ -18,7 +18,7 @@
       future.
     </p>
     <a
-      [routerLink]="['/staff-recruitment', establishment.uid, 'type-of-employer']"
+      [routerLink]="['/workplace', establishment.uid, 'type-of-employer']"
       role="button"
       draggable="false"
       class="govuk-button govuk-!-margin-top-5"
