--- a/src/app/features/workplace/staff-recruitment/staff-recruitment.component.html
+++ b/src/app/features/workplace/staff-recruitment/staff-recruitment.component.html
@@ -1,14 +1,14 @@
 <div class="govuk-grid-row">
-  <div class="govuk-grid-column-two-thirds-from-desktop">
-    <h1 class="govuk-heading-l govuk-!-margin-bottom-8">Staff Recruitment</h1>
+  <div class="govuk-grid-column-three-quarters-from-desktop">
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-5">Staff Recruitment</h1>
     <p>We've added 4 new staff recruitment questions to ASC-WDS. We want to know:</p>
-    <ul class="govuk-list govuk-list--bullet">
+    <ul class="govuk-list govuk-list--bullet govuk-!-margin-left-5">
       <li>how much money is being spent on advertising for staff?</li>
       <li>how many people are being interviewed?</li>
       <li>whether new starters have to repeat training done with previous employers?</li>
       <li>whether Care Certificates are transferrable from workplace to workplace?</li>
     </ul>
-    <h2 class="govuk-heading-m govuk-!-margin-bottom-8">Why are we collecting this data?</h2>
+    <h2 class="govuk-heading-m govuk-!-margin-bottom-4">Why are we collecting this data?</h2>
     <p>
       The Department of Health and Social Care (DHSC) want to use our anonymised data to help them better understand the
       difficulties and cost of recruitment into the adult social care sector.
@@ -18,7 +18,7 @@
       future.
     </p>
     <a
-      [routerLink]="['/workplace', establishment.uid, 'type-of-employer']"
+      [routerLink]="['/workplace', establishment.uid, '']"
       role="button"
       draggable="false"
       class="govuk-button govuk-!-margin-top-5"
