filename and selector changes from PR

--- a/src/app/features/workplace/staff-recruitment/staff-recruitment-start.component.html
+++ b/src/app/features/workplace/staff-recruitment/staff-recruitment-start.component.html
@@ -18,7 +18,7 @@
       future.
     </p>
     <a
-      [routerLink]="['/workplace', establishment.uid, '']"
+      [routerLink]="['/workplace', establishment.uid, 'recruitment-advertising-cost']"
       role="button"
       draggable="false"
       class="govuk-button govuk-!-margin-top-5"
