--- a/src/app/features/dashboard/home-tab/home-tab.component.html
+++ b/src/app/features/dashboard/home-tab/home-tab.component.html
@@ -27,7 +27,7 @@
     </ng-container>
 
     <ng-container *ngIf="workplace && canEditEstablishment && !recruitmentJourneyExistingUserBanner">
-      <app-inset-text [color]="'todo'">
+      <app-inset-text *ngIf="workplace.employerType" [color]="'todo'">
         <div class="govuk-grid-row">
           <div class="govuk-grid-column-full">
             <h2 class="govuk-heading-s govuk-!-margin-bottom-2">Staff recruitment is difficult</h2>
@@ -35,7 +35,9 @@
               Skills for Care are working with the Department of Health and Social Care to help them better understand
               how difficult it is to recruit people into the adult social care sector.
             </p>
-            <a [routerLink]="['/staff-recruitment']"> Answer our 4 new staff recruitment questions </a>
+            <a [routerLink]="['/staff-recruitment']" (click)="setRecuritmentBannerTotrue()">
+              Answer our 4 new staff recruitment questions
+            </a>
           </div>
         </div>
       </app-inset-text>
